Updated Projects Page Layout

--- a/projects.html
+++ b/projects.html
@@ -17,12 +17,212 @@
     <div class="cont">
         <div class="sepRedirector" onclick="">
             <h1>BoushehriTeam.com</h1>
+            <sub style="color: orange;">Being Used Locally Until Financial Industry's Compliance Team Allows Publication</sub>
             <p>A robust platform supporting over 1,000 users at Boushehri Financial Consulting, designed to streamline operations, enhance content management, and track team progress.</p>
+            <div class="read-more-wrapper">
+                <div class="read-more-container">
+                    <p>Technologies used:</p>
+                    <div class="tech-stack">
+                        <figure>
+                            <img width="48" src="Images/Csharp_Logo.png" alt="C#"> 
+                            <figcaption>C#</figcaption>
+                        </figure>
+                        <figure>
+                            <img width="48" src="Images/Razor_Logo.png" alt="ASP.NET Razor">
+                            <figcaption>ASP.NET Razor</figcaption>
+                        </figure>
+                        <figure>
+                            <img width="48" src="Images/MSSQL_Logo.png" alt="MS-SQL">
+                            <figcaption>MS-SQL</figcaption>
+                        </figure>
+                        <figure>
+                            <img width="48" src="Images/JavaScript_Logo.png" alt="Javascript">
+                            <figcaption>Javascript</figcaption>
+                        </figure>
+                        <figure>
+                            <img width="48" src="Images/JQuery_Logo.png" alt="JQuery">
+                            <figcaption>JQuery</figcaption>
+                        </figure>
+                        <figure>
+                            <img width="48" src="Images/HTML_Logo.png" alt="HTML">
+                            <figcaption>HTML</figcaption>
+                        </figure>
+                    </div>
+
+                    <hr style="margin: 2.5rem;">
+
+                    <ol class="highlights">
+                        <li>
+                            <h3>
+                                <b>Content Security & Accessibility</b>
+                            </h1>
+                             <br>
+                             <span>Built a secure HLS-like video streaming system and a video library to prevent unauthorized downloads, ensuring content privacy and controlled access.</span>
+                        </li>
+                        <li>
+                            <h3>
+                                <b>Automation & Tracking</b>
+                            </h1>
+                             <br>
+                             <span>Automated licensing processes with detailed progress trackers, document generators, and reports, saving advisors hours on repetitive tasks.</span>
+                        </li>
+                        <li>
+                            <h3>
+                                <b>Optimization & Performance</b>
+                            </h1>
+                             <br>
+                             <span>Utilized IMemoryCache to reduce repetitive SQL calls and calculations, improving system performance and scalability. Developed custom C# attributes to streamline SQL operations and enhance database efficiency.</span>
+                        </li>
+                        <li>
+                            <h3>
+                                <b>Team Management</b>
+                            </h1>
+                             <br>
+                             <span>Developed role-based access systems for career progression, interactive admin panels for real-time team insights, and tools for event ticketing, RSVP, and payment handling.</span>
+                        </li>
+                        <li>
+                            <h3>
+                                <b>Technical Innovations</b>
+                            </h1>
+                             <br>
+                             <span>Created JSON-to-property JavaScript libraries for dynamic UI updates and implemented SMTP email systems for seamless communication with team members.</span>
+                        </li>
+                        <li>
+                            <h3>
+                                <b>Background Services</b>
+                            </h1>
+                             <br>
+                             <span>Eliminated manual data-feeding of the administration team, by implementing required background services to retrieve and process all reports automatically on a daily basis.</span>
+                        </li>
+                        <li>
+                            <h3>
+                                <b>Collaboration & Communication</b>
+                            </h1>
+                             <br>
+                             <span>Successfully communicated workflows and ideas with non-technical stakeholders and administration teams, translating their needs into practical technical solutions.</span>
+                        </li>
+                    </ol>
+                </div>
+                <button class="read-more-btn redirector" onclick="toggleReadMore(this)">Read more...</button>
+              </div>
             <a href="https://boushehriteam.com" class="redirector" target="_blank">Website</a>
         </div>
         <div class="sepRedirector" onclick="">
             <h1>Admin Assistance Master App</h1>
-            <p>Developed a suite of five apps that automated 50% of the administrative workload for Boushehri Financial Consulting, allowing the team to focus on strategic priorities.</p>
+            <p>Developed a suite of five apps that automated 60% of the administrative workload for Boushehri Financial Consulting, allowing the team to focus on strategic priorities.</p>
+            <div class="read-more-wrapper">
+                <div class="read-more-container">
+                    <p>Technologies used:</p>
+                    <div class="tech-stack">
+                        <figure>
+                            <img width="48" src="Images/Csharp_Logo.png" alt="C#"> 
+                            <figcaption>C#</figcaption>
+                        </figure>
+                        <figure>
+                            <img width="48" src="Images/WinForms_Logo.png" alt="Windows Forms">
+                            <figcaption>Windows Forms</figcaption>
+                        </figure>
+                    </div>
+
+                    <hr style="margin: 2.5rem;">
+
+                    <ol class="highlights">
+                        <li>
+                            <h3>
+                                <b>Process Automation</b>
+                            </h1>
+                             <br>
+                             <span>Streamlined repetitive daily tasks like licensing checks, contest leaderboard generation, and milestone tracking, reducing manual effort significantly (An Approximately 60% workload reduction).</span>
+                        </li>
+                        <li>
+                            <h3>
+                                <b>Technical Adaptability</b>
+                            </h1>
+                             <br>
+                             <span>Designed workarounds for websites lacking APIs, using HTTPClient and multi-threading to optimize data processing and report generation.</span>
+                        </li>
+                        <li>
+                            <h3>
+                                <b>Optimization & Performance</b>
+                            </h1>
+                             <br>
+                             <span>Utilized IMemoryCache to reduce repetitive SQL calls and calculations, improving system performance and scalability. Developed custom C# attributes to streamline SQL operations and enhance database efficiency.</span>
+                        </li>
+                        <li>
+                            <h3>
+                                <b>Improved Efficiency</b>
+                            </h1>
+                             <br>
+                             <span>Enhanced data processing speed and accuracy with parallel processing for large datasets, ensuring timely and reliable output.</span>
+                        </li>
+                        <li>
+                            <h3>
+                                <b>Collaboration & Communication</b>
+                            </h1>
+                             <br>
+                             <span>Worked closely with non-technical administrative staff to understand their challenges and implement user-friendly solutions that addressed their pain points effectively.</span>
+                        </li>
+                        <li>
+                            <h3>
+                                <b>Reusability</b>
+                            </h1>
+                             <br>
+                             <span>Built all processors as class libraries, that can be reused and compiled on all platforms when needed (Migration from WinForms to ASP.Net)</span>
+                        </li>
+                    </ol>
+                </div>
+                <button class="read-more-btn redirector" onclick="toggleReadMore(this)">Read more...</button>
+              </div>
+        </div>
+        <div class="sepRedirector" onclick="">
+            <h1>Administration Telegram Bot</h1>
+            <p>Developing an entire administration Telegram bot to manage team members, aid clients with accessing required information at any time, and guide new members with their progress in a new industry.</p>
+            <div class="read-more-wrapper">
+                <div class="read-more-container">
+                    <p>Technologies used:</p>
+                    <div class="tech-stack">
+                        <figure>
+                            <img width="48" src="Images/Csharp_Logo.png" alt="C#"> 
+                            <figcaption>C#</figcaption>
+                        </figure>
+                        <figure>
+                            <img width="96" src="Images/LiteDB_Logo.png" alt="LiteDB">
+                            <figcaption>LiteDB</figcaption>
+                        </figure>
+                        <figure>
+                            <img width="48" src="Images/Telegram_Logo.png" alt="Telegram API">
+                            <figcaption>Telegram API</figcaption>
+                        </figure>
+                    </div>
+
+                    <hr style="margin: 2.5rem;">
+
+                    <ol class="highlights">
+                        <li>
+                            <h3>
+                                <b>Order Access to Content</b>
+                            </h1>
+                             <br>
+                             <span>New users will be taken through an order of content that need to be completed, before having further access to other content, which allows admins to track each user’s detailed progress and avoid any jumps and confusions between the content.</span>
+                        </li>
+                        <li>
+                            <h3>
+                                <b>Quick Access to Documents</b>
+                            </h1>
+                             <br>
+                             <span>There have been multiple HTTPClient agents created to help clients quickly access their required documents, from the related institutions.</span>
+                        </li>
+                        <li>
+                            <h3>
+                                <b>Calendar Synchronization</b>
+                            </h1>
+                             <br>
+                             <span>Meetings are now easily booked without mistakes and with proper reminders for any parties involved in a meeting.</span>
+                        </li>
+                    </ol>
+                </div>
+                <button class="read-more-btn redirector" onclick="toggleReadMore(this)">Read more...</button>
+              </div>
         </div>
         <div class="sepRedirector" onclick="">
             <h1>ReCPP</h1>
@@ -38,6 +238,22 @@
         <div class="sepRedirector" onclick="">
             <h1>Mask Map Generator</h1>
             <p>Using different texture layers, this application creates an RGB mask map for HDRP usage.</p>
+            <div class="read-more-wrapper">
+                <div class="read-more-container">
+                    <p>Technologies used:</p>
+                    <div class="tech-stack">
+                        <figure>
+                            <img width="48" src="Images/Csharp_Logo.png" alt="C#"> 
+                            <figcaption>C#</figcaption>
+                        </figure>
+                        <figure>
+                            <img width="48" src="Images/Unity_Logo.png" alt="Unity">
+                            <figcaption>Unity</figcaption>
+                        </figure>
+                    </div>
+                </div>
+                <button class="read-more-btn redirector" onclick="toggleReadMore(this)">Read more...</button>
+              </div>
         </div>
         <div class="sepRedirector" onclick="">
             <h1>Chunked Data Transfer</h1>
@@ -63,8 +279,24 @@
         <div id="amtepprg" class="sepRedirector" onclick="">
             <h1>Automated Multi-Thread Exam Processor & PDF Report Generator</h1>
             <p>Written in C# for <a href="https://www.salamsch.com">Salam School</a>, this application reads multiple large Excel file (Data base), containing thousands of student responses to a multi-choice questionnaire, job titles and descriptions, education paths, etc. Using a specific formula to identify the student’s personality, all the responses are processed and based on their personality, they’re matched with multiple jobs. At last, a PDF file is generated with their information, personality graph, extra information and multiple pages, providing them with the jobs that match their personality and helping them choose the correct education path, learn relevant softwares, etc.You can see an example of a generated result below:</p>
-            <input type="image" class="scImg" src="Images/PARALLELERG0.PNG" onclick="javascript:window.open('Images/PARALLELERG0.PNG');"/>
-            <input type="image" class="scImg" src="Images/PARALLELERG1.PNG" onclick="javascript:window.open('Images/PARALLELERG1.PNG');"/>
+            <div class="read-more-wrapper">
+                <div class="read-more-container">
+                    <p>Technologies used:</p>
+                    <div class="tech-stack">
+                        <figure>
+                            <img width="48" src="Images/Csharp_Logo.png" alt="C#"> 
+                            <figcaption>C#</figcaption>
+                        </figure>
+                        <figure>
+                            <img width="48" src="Images/WinForms_Logo.png" alt="Windows Forms">
+                            <figcaption>Windows Forms</figcaption>
+                        </figure>
+                    </div>
+                    <input type="image" class="scImg" src="Images/PARALLELERG0.PNG" onclick="javascript:window.open('Images/PARALLELERG0.PNG');"/>
+                    <input type="image" class="scImg" src="Images/PARALLELERG1.PNG" onclick="javascript:window.open('Images/PARALLELERG1.PNG');"/>
+                </div>
+                <button class="read-more-btn redirector" onclick="toggleReadMore(this)">Read more...</button>
+              </div>
         </div>
         <div class="sepRedirector" onclick="">
             <h1>Simple AI Library in C#</h1>
