Fixed Mobile Overflow

--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
     <div class="cont">
         <div class="sepRedirector" onclick="">
             <h1>BoushehriTeam.com</h1>
-            <sub style="color: orange;">Being Used Locally Until Financial Industry's Compliance Team Allows Publication</sub>
+            <sub style="color: orange; font-size: 0.8rem;">Being Used Locally Until Financial Industry's Compliance Team Allows Publication</sub>
             <p>A robust platform supporting over 1,000 users at Boushehri Financial Consulting, designed to streamline operations, enhance content management, and track team progress.</p>
             <div class="read-more-wrapper">
                 <div class="read-more-container">
